# kingfisher

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MULTI_STEP_REVOCATION_SUMMARY.md  Makefile  NOTICE  README.md  REVOCATION_CHANGES_SUMMARY.md  REVOCATION_CORRECTIONS_SUMMARY.md  SECURITY.md  THREAT_MODEL_PROMPT.md  json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/requirements/: pypi-build.txt
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  docs.yml  pypi.yml  release-docker.yml  release.yml  (+1 more)
crates/kingfisher-core/: Cargo.toml
crates/kingfisher-core/src/: blob.rs  bstring_escape.rs  content_type.rs  entropy.rs  error.rs  git_commit_metadata.rs  lib.rs  location.rs  origin.rs
crates/kingfisher-rules/: Cargo.toml
crates/kingfisher-rules/data/rules/: AGENTS.md  ably.yml  abstractapi.yml  abuseipdb.yml  adafruitio.yml  adobe.yml  age.yml  agora.yml  ai71.yml  aikido.yml  airbrake.yml  akamai.yml  alibaba.yml  amazonmws.yml  amazonoauth.yml  amplitude.yml  anthropic.yml  anypoint.yml  apify.yml  appcenter.yml  arcjet.yml  artifactory.yml  asaas.yml  asana.yml  atlassian.yml  auth.yml  aviationstack.yml  aws.yml  axiom.yml  azure-notification-hub.yml  azure.yml  azureapim.yml  azurebatch.yml  azurecognitive.yml  azurecommunication.yml  azurecosmosdb.yml  azureeventgrid.yml  azurefunctionkey.yml  azurelogicapps.yml  azuremaps.yml  (+380 more)
crates/kingfisher-rules/src/: defaults.rs  lib.rs  liquid_filters.rs  rule.rs  rules.rs  rules_database.rs
docker/: Dockerfile
docs/: ACCESS_MAP.md  ADVANCED.md  AGENTS.md  ARCHITECTURE.md  BASELINE.md  COMPARISON.md  CONFIG.md  CONTEXT_VERIFICATION.md  DEPLOYMENT.md  FINGERPRINT.md  INSTALLATION.md  INTEGRATIONS.md  LIBRARY.md  PARSING.md  REVOCATION_PROVIDERS.md  REVOCATION_VERIFICATION_NOTES.md  RULES.md  TOKEN_REVOCATION_SUPPORT.md  TREE_SITTER.md  USAGE.md
docs-site/: mkdocs.yml  requirements.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base64.rs  fuzz_entropy.rs  fuzz_location.rs  fuzz_span.rs
pypi/: hatch_build.py  pyproject.toml
scripts/: build-pypi-wheel.sh  install-kingfisher.ps1  kingfisher-pre-commit-auto.ps1
src/: access_map.rs  azure.rs  baseline.rs  binary.rs  blob.rs  bstring_escape.rs  bstring_table.rs  confluence.rs  decompress.rs  defaults.rs  direct_revoke.rs  direct_validate.rs  entropy.rs  findings_store.rs  gcs.rs  git_binary.rs  git_commit_metadata.rs  git_metadata_graph.rs  git_repo_enumerator.rs  gitea.rs  github.rs  gitlab.rs  grpc_validation.rs  huggingface.rs  inline_ignore.rs  jira.rs  lib.rs  liquid_filters.rs  location.rs  main.rs  matcher.rs  origin.rs  parser.rs  postman.rs  provider_endpoints.rs  pyc.rs  reporter.rs  rule_loader.rs  rules.rs  rules_database.rs  (+12 more)
testdata/: css_vulnerable.css  html_embedded_vulnerable.html  html_vulnerable.html
tests/: cli.rs  cli_access_map_output.rs  cli_git_clone_flags.rs  cli_validate_revoke.rs  dependent_rule_dedup.rs  fingerprint_dedup.rs  int_allowlist.rs  int_base64.rs  int_bitbucket.rs  int_context_verification.rs  int_dedup.rs  int_github.rs  int_gitlab.rs  int_postman.rs  int_quiet.rs  int_redact.rs  int_rules_no_validated_findings.rs  int_slack.rs  int_teams.rs  int_uri_parsing.rs  int_validation_cache.rs  int_vulnerable_files.rs  jdbc_rule.rs  library_crates_external_project.rs  live_db_validation.rs  pre_commit_installer.rs  smoke_archive.rs  smoke_branch.rs  smoke_update.rs  tls_mode.rs
(+175 files in other folders)
