[package]
name = "kingfisher-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kingfisher-core]
path = "../crates/kingfisher-core"

[dependencies.kingfisher-scanner]
path = "../crates/kingfisher-scanner"

# Expose base64 for the fuzz target that exercises get_base64_strings
[dependencies.base64]
version = "0.22"

[workspace]
members = ["."]

# Must mirror the root workspace patch so vectorscan-rs builds from the vendored copy
[patch.crates-io]
vectorscan-rs = { path = "../vendor/vectorscan-rs/vectorscan-rs" }
vectorscan-rs-sys = { path = "../vendor/vectorscan-rs/vectorscan-rs-sys" }

[[bin]]
name = "fuzz_entropy"
path = "fuzz_targets/fuzz_entropy.rs"
doc = false

[[bin]]
name = "fuzz_location"
path = "fuzz_targets/fuzz_location.rs"
doc = false

[[bin]]
name = "fuzz_base64"
path = "fuzz_targets/fuzz_base64.rs"
doc = false

[[bin]]
name = "fuzz_span"
path = "fuzz_targets/fuzz_span.rs"
doc = false
