[package]
name = "kingfisher-core"
version = "0.1.0"
description = "Core types and traits for Kingfisher secret scanner"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing and crypto
sha1 = "0.10"
hex = "0.4"

# Memory management
memmap2 = "0.9"
once_cell = "1.21"
parking_lot = "0.12"

# Collections
smallvec = { version = "1", features = ["const_generics", "const_new", "union"] }
rustc-hash = "2.1"
dashmap = "6.1"

# Byte string handling
bstr = { version = "1.12", features = ["serde"] }
memchr = "2.7"

# Git types (minimal, for ObjectId and Time)
gix = { version = "0.73", default-features = false, features = ["serde"] }

# Console formatting
console = "0.15"

[dev-dependencies]
pretty_assertions = "1.4"
